<resources>
    <string name="app_name">SavingLotto</string>

    <string name="btn_select">เลือก</string>
    <string name="btn_check_lottery">Check Lottery</string>
    <string name="btn_display_lottery">แสดงผล</string>
    <string name="btn_okay">ตกลง</string>
    <string name="btn_mode_simulation">โหมดจำลอง</string>
    <string name="btn_mode_purchase">โหมดซื้อจริง</string>
    <string name="btn_save">บันทึก</string>

    <string name="hint_input_amount">กรอกจำนวนที่ต้องการซื้อ</string>
    <string name="hint_input_lottery_number">กรอกเลขที่ต้อง (ตัวอย่าง.:911234)</string>

    <string name="text_selected_date">งวดวันที่</string>
    <string name="text_price_lottery">ราคา/ใบ</string>
    <string name="text_amount">จำนวน :</string>
    <string name="text_paid">จำนวนเงิน :</string>
    <string name="text_status">สถานะ</string>
    <string name="text_static_lottery">สถิติการตรวจล็อตเตอรี่</string>
    <string name="text_amount_lottery">จำนวนสลากที่ตรวจ</string>
    <string name="text_win_lottery">ถูกรางวัล</string>
    <string name="text_did_not_win_lottery">ไม่ถูกรางวัล</string>
    <string name="text_amount_paid_lottery">จำนวนเงินค่าสลากทั้งหมด</string>
    <string name="text_value_prize">มูลค่ารางวัลทั้งหมด</string>
    <string name="text_clear">เคลียร์</string>
    <string name="text_type">type</string>
    <string name="text_history">ประวัติการตรวจล็อตเตอรี่</string>
    <string name="text_select_date">เลือกงวดรางวัล</string>
    <string name="text_search_date">ค้นหาวันที่</string>
    <string name="text_baht">บาท</string>
    <string name="text_summary">สรุปผล</string>
    <string name="text_add">เพิ่มล็อตเตอรี่</string>
    <string name="text_summary_mode_sim">สรุปผลโหมดจำลอง</string>
    <string name="text_total_value">จำนวนเงินรางวัลทั้งหมด</string>
    <string name="text_profit">กำไร</string>
    <string name="text_loss">ขาดทุน</string>


    <string name="error_message_length">กรุณากรอกตัวเลขให้ครบ 6 หลัก</string>
    <string name="error_message_amount">กรุณากรอกจำนวนที่ต้องการซื้อ</string>

    <string name="message_delete_history">ลบประวัติการตรวจแล้ว</string>
    <string name="message_delete_complete">ลบแล้ว</string>
    <string name="message_no_internet_connection">ไม่มีการเชื่อมต่ออินเทอร์เน็ต</string>
    <string name="message_no_internet_connection_description">โปรดตรวจสอบการเชื่อมต่ออินเทอร์เน็ตของคุณแล้วลองอีกครั้ง</string>
    <string name="message_result">รอผลรางวัล</string>
    <string name="message_value_prize">มูลค่ารางวัล :</string>

    <string name="fragment_check_lottery">ตรวจล็อตเตอรี่</string>
</resources>
