<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="project.senior.com.firebaselottery.Activities.ModePurchase.SummaryPurchaseActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/pur_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/text_amount_lottery"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/pur_amountLotteryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/text_win_lottery"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/pur_winTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/text_did_not_win_lottery"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/pur_didNotWinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/text_amount_paid_lottery"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/pur_totalPaidTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="บาท"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/text_total_value"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/pur_totalValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="บาท"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/text_profit"
                android:textColor="@color/colorProfit"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/pur_profitTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorProfit" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="บาท"
                android:textColor="@color/colorProfit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/text_loss"
                android:textColor="@color/colorLoss"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/pur_lossTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorLoss" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="บาท"
                android:textColor="@color/colorLoss" />

        </LinearLayout>

    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pur_pieChart"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

    </com.github.mikephil.charting.charts.PieChart>

</LinearLayout>
