<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/checkLotteryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_select_date"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp">

            <Spinner
                android:id="@+id/spinnerSelectDate"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorAccent1">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextLotteryNumber"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:maxLength="6" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/buttonSelect"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_okay" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_history"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewCheckLottery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>